--- a/src/scss/components/_theme-toggle.scss
+++ b/src/scss/components/_theme-toggle.scss
@@ -3,7 +3,7 @@
 .theme-toggle {
   position: absolute;
   inset-inline-end: 50%;
-  inset-block-start: 170px;
+  inset-block-start: 185px;
   transform: translateX(50%);
 
   fieldset {
@@ -19,15 +19,6 @@
       border-color: var(--focus-color);
       transition: border-color 200ms;
     }
-
-  }
-
-  .current-setting {
-    position: absolute;
-    inset-inline-start: 5%;
-    inset-block-start: 30%;
-    width: max-content;
-    font-size: $step--1;
   }
 
   & label {
@@ -38,8 +29,10 @@
 
   & input {
     opacity: 0;
-    position: relative;
+    position: absolute;
   }
+
+
 
   input:checked~label::after {
     content: '';
@@ -49,5 +42,7 @@
     background-color: var(--accent-300);
     inset-block-start: -.2em;
     inset-inline-start: -5%;
+    z-index: -1;
+
   }
 }
