--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* godlike reset */
 @-ms-viewport {
   width: device-width;
@@ -463,6 +464,17 @@ a:before {
   inset-inline-end: 0;
   inset-block-end: 0.2em;
   transition: all 300ms ease;
+}
+a span::after {
+  content: "✔";
+  position: absolute;
+  transform: scale(0.7);
+  inset-inline-start: -0.6em;
+  inset-block-start: -0.4em;
+  color: var(--main-100);
+}
+a:visited span::after {
+  color: var(--accent-200);
 }
 a:hover {
   -webkit-text-decoration-color: var(--accent-300);
