Edit prefers-reduce-motion query

--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -416,6 +416,16 @@ th {
 
 /* end godlike reset */
 
+@media (prefers-reduced-motion) {
+
+  *,
+  *::before,
+  *::after {
+    transition-duration: .001ms !important;
+    animation-duration: .001ms !important;
+  }
+}
+
 html {
   scroll-behavior: smooth;
 
