--- a/css/main.css
+++ b/css/main.css
@@ -307,6 +307,15 @@ th {
 }
 
 /* end godlike reset */
+@media (prefers-reduced-motion) {
+  *,
+*::before,
+*::after {
+    transition-duration: 0.001ms !important;
+    -webkit-animation-duration: 0.001ms !important;
+            animation-duration: 0.001ms !important;
+  }
+}
 html {
   scroll-behavior: smooth;
 }
@@ -560,7 +569,7 @@ body {
   background-color: var(--main-100);
   font-family: "Khula", sans-serif;
   overflow-x: hidden;
-  transition: background-color 500ms ease-out, color 500ms ease-out;
+  transition: background-color 200ms ease-out, color 200ms ease-out;
 }
 
 .nav {
@@ -704,14 +713,14 @@ body {
           margin-block-end: 1rem;
   padding-right: 100%;
   transform: translateX(-20%);
-  transition: background-color 500ms ease-out;
+  transition: background-color 200ms ease-out;
 }
 .moving-lines__line:last-child, .moving-lines__line:nth-child(4) {
   background-color: var(--main-200);
   transform: translateX(-30%);
   -webkit-animation-duration: 3.9s;
           animation-duration: 3.9s;
-  transition: background-color 500ms ease-out;
+  transition: background-color 200ms ease-out;
 }
 .moving-lines__line:nth-child(2) {
   transform: translateX(-60%);
@@ -760,12 +769,6 @@ body {
           animation: glide 3.5s cubic-bezier(0.23, 0.36, 0.28, 0.83) 1;
 }
 
-@media (prefers-reduced-motion) {
-  .moving {
-    -webkit-animation: none;
-            animation: none;
-  }
-}
 .about {
   -webkit-margin-before: 5rem;
           margin-block-start: 5rem;
@@ -870,11 +873,6 @@ body {
   transform: translateX(50px);
   transition: opacity 500ms, transform 700ms cubic-bezier(0.5, 1.75, 0.75, 1.25);
 }
-@media (prefers-reduced-motion) {
-  .projects .project.right {
-    transform: none;
-  }
-}
 .projects .project.right.in-view {
   opacity: 1;
   transform: translateX(0);
@@ -883,11 +881,6 @@ body {
   opacity: 0;
   transform: translateX(-50px);
   transition: opacity 500ms, transform 700ms cubic-bezier(0.5, 1.75, 0.75, 1.25);
-}
-@media (prefers-reduced-motion) {
-  .projects .project.left {
-    transform: none;
-  }
 }
 .projects .project.left.in-view {
   opacity: 1;
@@ -1224,6 +1217,8 @@ body {
   max-width: 60ch;
   margin-inline: auto;
   margin-block: clamp(5rem, 4.61rem + 1.94vw, 6.25rem);
+}
+.more p {
   padding: 0.5em;
 }
 
