--- a/src/scss/layout/_projects.scss
+++ b/src/scss/layout/_projects.scss
@@ -30,10 +30,6 @@
     transform: translateX(50px);
     transition: opacity 500ms, transform 700ms $ease-elastic-5;
 
-    @media (prefers-reduced-motion) {
-      transform: none;
-    }
-
     &.in-view {
       opacity: 1;
       transform: translateX(0);
@@ -44,10 +40,6 @@
     opacity: 0;
     transform: translateX(-50px);
     transition: opacity 500ms, transform 700ms $ease-elastic-5;
-
-    @media (prefers-reduced-motion) {
-      transform: none;
-    }
 
     &.in-view {
       opacity: 1;
@@ -187,5 +179,9 @@ $offset in mixin.$wordSpacing {
   max-width: 60ch;
   margin-inline: auto;
   margin-block: $space-xl;
-  padding: .5em;
+
+  p {
+    padding: .5em;
+  }
+
 }
