Play around with svg

--- a/css/main.css
+++ b/css/main.css
@@ -366,6 +366,8 @@ h2 {
   --h2-color-light: var(--body-text-light);
   --form-text-light: var(--body-text-light);
   --button-text-light: var(--body-text-light);
+  --hair-first-light: hsl(15, 86%, 55%);
+  --hair-second-light: hsl(0, 81%, 21%);
   --main-400-dark: hsl(240, 13%, 55%);
   --main-300-dark: hsl(240, 13%, 45%);
   --main-200-dark: hsl(240, 13%, 35%);
@@ -381,6 +383,8 @@ h2 {
   --h2-color-dark: #2c2c2c;
   --form-text-dark: white;
   --button-text-dark: black;
+  --hair-first-dark: rgb(136, 75, 123);
+  --hair-second-dark: rgb(54, 8, 72);
 }
 
 body.light {
@@ -399,6 +403,8 @@ body.light {
   --h2-color: var(--h2-color-light);
   --form-text: var(--form-text-light);
   --button-text: var(--button-text-light);
+  --hair-first: var(--hair-first-light);
+  --hair-second: var(--hair-second-light);
 }
 
 body.dark {
@@ -417,6 +423,8 @@ body.dark {
   --h2-color: var(--h2-color-dark);
   --form-text: var(--form-text-dark);
   --button-text: var(--button-text-dark);
+  --hair-first: var(--hair-first-dark);
+  --hair-second: var(--hair-second-dark);
 }
 
 body.system {
@@ -435,6 +443,8 @@ body.system {
   --h2-color: var(--h2-color-light);
   --form-text: var(--form-text-light);
   --button-text: var(--button-text-light);
+  --hair-first: var(--hair-first-light);
+  --hair-second: var(--hair-second-light);
 }
 @media (prefers-color-scheme: dark) {
   body.system {
@@ -453,6 +463,8 @@ body.system {
     --h2-color: var(--h2-color-dark);
     --form-text: var(--form-text-dark);
     --button-text: var(--button-text-dark);
+    --hair-first: var(--hair-first-dark);
+    --hair-second: var(--hair-second-dark);
   }
 }
 
@@ -819,6 +831,7 @@ body {
 .about__image {
   filter: drop-shadow(3px 5px 7px rgba(0, 0, 0, 0.4));
   max-width: 100%;
+  margin-inline: auto;
 }
 @media (min-width: 1100px) {
   .about__image {
