--- a/src/scss/layout/_about.scss
+++ b/src/scss/layout/_about.scss
@@ -36,6 +36,7 @@
   &__image {
     filter: drop-shadow(3px 5px 7px rgba(0, 0, 0, .4));
     max-width: 100%;
+    margin-inline: auto;
 
     @media (min-width: 1100px) {
       grid-area: 2 / 1;
