--- a/src/scss/components/_theme-toggle.scss
+++ b/src/scss/components/_theme-toggle.scss
@@ -3,7 +3,6 @@
 .theme-toggle {
   position: relative;
 
-
   fieldset {
     display: flex;
     gap: 1em;
@@ -29,6 +28,7 @@
 
     & span {
       text-transform: uppercase;
+      font-weight: 900;
     }
   }
 
