--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,7 @@
 @use './base/reset';
 @use './utilities/variables';
 @use './layout/body';
+@use './components/loader';
 @use './layout/header';
 @use './layout/about';
 @use './layout/projects';
