--- a/css/main.css
+++ b/css/main.css
@@ -317,11 +317,17 @@ th {
             animation-duration: 0.001ms !important;
   }
 }
+body,
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 @media (prefers-reduced-motion) {
-  html {
+  body,
+html {
     scroll-behavior: auto;
   }
 }
@@ -589,7 +595,6 @@ body {
   color: var(--body-text);
   background-color: var(--main-100);
   font-family: "Khula", sans-serif;
-  overflow-x: hidden;
 }
 
 header,
@@ -598,37 +603,6 @@ footer {
   transition: opacity 200ms 200ms;
 }
 
-#loader {
-  position: fixed;
-  display: flex;
-  z-index: 1;
-  width: 120px;
-  height: 120px;
-  border: 16px solid hsl(235deg, 56%, 84%);
-  border-radius: 50%;
-  border-top: 16px solid hsl(32deg, 100%, 66%);
-  -webkit-animation: spin 1.5s ease-in-out infinite;
-  animation: spin 1.5s ease-in-out infinite;
-  transition: opacity 200ms;
-}
-
-@-webkit-keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
 .nav {
   width: 100%;
   height: 200px;
