--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -426,8 +426,13 @@ th {
   }
 }
 
+body,
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
+  width: 100%;
+  height: 100%;
+  position: relative;
 
   @media (prefers-reduced-motion) {
     scroll-behavior: auto;
