--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -433,10 +433,26 @@ html {
   width: 100%;
   height: 100%;
   position: relative;
+  scrollbar-width: 10px;
+  scrollbar-color: var(--accent-400) var(--main-100);
 
   @media (prefers-reduced-motion) {
     scroll-behavior: auto;
   }
+}
+
+body::-webkit-scrollbar {
+  width: 12px;
+}
+
+body::-webkit-scrollbar-track {
+  background: var(--main-100);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: var(--accent-400);
+  border-radius: 6px;
+  border: 3px solid var(--main-100);
 }
 
 ul {
