--- a/src/scss/components/_links.scss
+++ b/src/scss/components/_links.scss
@@ -35,6 +35,7 @@ a {
   &:hover {
     text-decoration-color: var(--accent-300);
     color: var(--link-text);
+    cursor: pointer;
 
     &:before {
       width: 4px;
@@ -52,7 +53,6 @@ a {
 a[class] {
   text-decoration: none;
   position: relative;
-  // width: fit-content;
 
   &::after {
     content: '';
@@ -74,5 +74,6 @@ a[class] {
 
   &:hover {
     color: black;
+    cursor: pointer;
   }
 }
