--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -4,7 +4,7 @@
 
 .moving-lines {
   width: 100%;
-  margin-block: 5rem;
+  margin-block-start: 5rem;
 
   &__line {
     background-color: var(--main-300);
